--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <div class="text-main">
             <h1>Gerencie seus<br>gastos!</h1>
-            <p>Lorem ipsum dolor sit amet consectetur. A auctor tortor tellus consectetur dictumst. Erat aliquet dignissim sed ullamcorper at lorem at adipiscing. Eu et at nec pretium lectus nisl nibh molestie. Quisque </p>
+            <p>Domine suas finanças com orçamentos personalizados. Use o feitiço orçamentário para criar planos mágicos adaptados às suas metas e receitas.</p>
         </div>
         <img class="img-main" src="assets/Manage money-amico.png" alt="">
     </main>
@@ -33,10 +33,12 @@
             <div class="box-img" data-anime="left">
                 <img src="assets/6404259.png" alt="Engrenagem">
             </div>
-            <p data-anime="right">Lorem ipsum dolor sit amet consectetur. A auctor tortor tellus consectetur dictumst. Erat aliquet dignissim sed ullamcorper at lorem at adipiscing. Eu et at nec pretium lectus nisl nibh molestie. Quisque </p>
+            <p data-anime="right">Na Econowizard, a segurança é nossa principal prioridade. Utilizamos magias modernas de criptografia para proteger suas informações financeiras de olhares indiscretos.
+
+</p>
         </div>
         <div class="info-container-2">
-            <p data-anime="left">Lorem ipsum dolor sit amet consectetur. A auctor tortor tellus consectetur dictumst. Erat aliquet dignissim sed ullamcorper at lorem at adipiscing. Eu et at nec pretium lectus nisl nibh molestie. Quisque </p>
+            <p data-anime="left">Estabeleça metas mágicas para seus objetivos financeiros. Acompanhe seu progresso e veja como pequenos encantamentos diários podem transformar suas finanças.</p>
             <div class="box-img" data-anime="right">
                 <img src="assets/4256873.png" alt="gráfico subindo">
             </div>
